# Exploratory-Data-Analysis-EDA-With-AI

./: .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted-1-Missing-Data-Issue-Missing-or-null-values-can-distort-statistical-calculations-or-break-models--1751851434313_1751851434315.txt
pages/: 1_Automated_Profiling.py  2_Data_Quality_Issues.py  3_Interactive_Analysis.py  4_Data_Cleaning.py  5_AI_Data_Cleaning.py  6_Auto_Dashboard.py  7_Question_Answering.py  7_Voice_Assistant.py  8_ML_Recommendations.py  9_3D_Visualizations.py
utils/: ai_client.py  data_quality.py  eda_utils.py  ml_recommendations.py  visualizations.py
