[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "autoviz>=0.1.905",
    "ipython>=9.4.0",
    "matplotlib>=3.10.0",
    "missingno>=0.5.2",
    "numpy>=2.1.3",
    "google-generativeai>=0.7.2",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "speechrecognition>=3.14.3",
    "streamlit>=1.46.1",
    "sweetviz>=2.3.1",
    "ydata-profiling>=4.16.1",
]
